fixes for registration pages

--- a/app/blocks/form/nd-form.scss
+++ b/app/blocks/form/nd-form.scss
@@ -767,6 +767,12 @@
       }
     }
 
+    &_mt45 {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 45px, xlg: 45, lg: 45, md: 45, sm: 45));
+      }
+    }
+
     &_fxc {
       justify-content: center;
     }
@@ -1103,6 +1109,12 @@
 
       @include screen('sm', max, 2) {
         margin-top: pxtovw(20, 375);
+      }
+    }
+
+    &_mt58 {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 58px, xlg: 58, lg: 58, md: 30, sm: 30));
       }
     }
   }
