--- a/app/pages/payment-details/payment-details-mr.pug
+++ b/app/pages/payment-details/payment-details-mr.pug
@@ -24,7 +24,7 @@ block content
       +e.column_form._sm-pb0
         +nd-logo._rs.__logo.nd-hide-sm
         +e.form
-          +pay-form({title: "Payment Details", titlenote: "Please add card details for this reservation. You won’t be charged at this point.", cardinfo: true})
+          +pay-form({title: "Payment Details", titlenote: "Please add card details for this reservation. You won’t be charged at this point.", cardinfo: true})(data-validated-form)
       +e.column_text
         +text-block._payment
           +e.media
