fix for title registration page

--- a/app/components/registration-form/registration-form.scss
+++ b/app/components/registration-form/registration-form.scss
@@ -466,7 +466,9 @@
       }
 
       &__button {
-        margin-top: pxtovw(16, 375);
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(16, 375);
+        }
       }
     }
 
