--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -41,6 +41,7 @@ include ../blocks/detail/detail
 include ../blocks/dialog/dialog
 include ../blocks/divider/divider
 include ../blocks/dots/dots
+include ../blocks/drop-navigation/drop-navigation
 include ../blocks/dropdown/dropdown
 include ../blocks/error/error
 include ../blocks/facility-grid/facility-grid
@@ -60,6 +61,7 @@ include ../blocks/filter-reset/filter-reset
 include ../blocks/filter-select/filter-select
 include ../blocks/filter-tag/filter-tag
 include ../blocks/filter-tags/filter-tags
+include ../blocks/filtration/filtration
 include ../blocks/footnote-star/footnote-star
 include ../blocks/footnote/footnote
 include ../blocks/form-box/form-box
