--- a/app/pages/host-account/host-account-finances-statements.pug
+++ b/app/pages/host-account/host-account-finances-statements.pug
@@ -18,12 +18,12 @@ block content
   +nd-page-header._grid
     .nd-container
       +nd-page-header-side
-        +nd-link-icon('arrow5')._back._back_md21.__back_md-noname.nd-hide-from-md Back
+        +nd-link-icon('arrow5')._back._back_md21.__back_md-noname.__back.nd-hide-from-md Back
       +nd-page-header-main
         - var menuList = getData('sideNavProfileHost.json').menu;
-        +e.mb-menu.nd-hide
+        +e.mb-menu.nd-hide-from-sm
           +slider-navigation(menuList, 4, 'Finances')
-        +e.mb-menu.nd-hide-from-md
+        +e.mb-menu.nd-hide-from-md.nd-hide-sm
           +slider-navigation([{name: "Statements", href: "host-account-finances-statements.html"}, {name: "Bank account details", href: "host-account-finances.html"}, {name: "Account stats", href: "host-account-finances.html"}], 0, 'Statements')
 
   +nd-content
