--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -91,21 +91,21 @@ block content
               +nd-link(href="ha-edit-space-conditions-2.html") Spacepool - Edit Space - Terms and conditions (page 2) (ha-edit-space-conditions-2.html)
           +e.group#nav-ha
             +e.head
-              +page-title Страницы Host Account (only HD breakpoint)
+              +page-title Страницы Host Account (partly only HD breakpoint)
             +e.list
-              +nd-link(href="host-account.html") Spacepool - Host Account - Spaces (host-account.html)
-              +nd-link(href="host-account-messages.html") Spacepool - Host Account - Messages (host-account-messages.html)
+              +nd-link(href="host-account.html") Spacepool - Host Account - Spaces <b>(All breaks)</b> (host-account.html)
+              +nd-link(href="host-account-messages.html") Spacepool - Host Account - Messages <b>(All breaks)</b> (host-account-messages.html)
               +nd-link(href="host-account-managers.html") Spacepool - Host Account - Managers (host-account-managers.html)
               +nd-link(href="host-account-managers-inactive.html") Spacepool - Host Account - Managers | Inactive (host-account-managers-inactive.html)
               +nd-link(href="host-account-managers-invite.html") Spacepool - Host Account - Managers | Invite (host-account-managers-invite.html)
               +nd-link(href="host-account-managers-invite-success.html") Spacepool - Host Account - Managers | Invite Success(host-account-managers-invite-success.html)
-              +nd-link(href="host-account-settings.html") Spacepool - Host Account - Settings (host-account-settings.html)
+              +nd-link(href="host-account-settings.html") Spacepool - Host Account - Settings <b>(All breaks)</b> (host-account-settings.html)
               +nd-link(href="host-account-settings-basic.html") Spacepool - Host Account - Settings | Basic information (host-account-settings-basic.html)
               +nd-link(href="host-account-settings-company.html") Spacepool - Host Account - Settings | Company details (host-account-settings-company.html)
               +nd-link(href="host-account-settings-password.html") Spacepool - Host Account - Settings | Password (host-account-settings-password.html)
               +nd-link(href="host-account-settings-notifications.html") Spacepool - Host Account - Settings | Notification settings (host-account-settings-notifications.html)
               +nd-link(href="host-account-finances.html") Spacepool - Host Account - Finances (host-account-finances.html)
-              +nd-link(href="host-account-finances-statements.html") Spacepool - Host Account - Finances | Statements (All breaks) (host-account-finances-statements.html)
+              +nd-link(href="host-account-finances-statements.html") Spacepool - Host Account - Finances | Statements <b>(All breaks)</b> (host-account-finances-statements.html)
               +nd-link(href="host-account-kyc.html") Spacepool - Host Account - KYC (host-account-kyc.html)
           +e.group#nav-ga
             +e.head
