--- a/app/components/space-settings/space-settings.scss
+++ b/app/components/space-settings/space-settings.scss
@@ -28,51 +28,71 @@
   }
 
   &__content {
-    display: flex;
-    justify-content: flex-start;
-    align-items: stretch;
-    align-content: flex-start;
-    flex-wrap: wrap;
+    @include display-grid;
+    @include grid-template-columns(442px 1fr);
+    @include grid-template-rows(auto auto);
+    @include rule(column-gap, (xl: 40px, xlg: 40, lg: 40, md: 50, sm: 0));
+    // display: flex;
+    // justify-content: flex-start;
+    // align-items: stretch;
+    // align-content: flex-start;
+    // flex-wrap: wrap;
     box-sizing: border-box;
     padding: 45px 45px 0;
+    width: 100%;
 
     @include screen('xlg', max, 2) {
+      @include grid-template-columns(pxtovw(442, 1660) 1fr);
+
       padding: pxtovw(45, 1660) pxtovw(45, 1660) 0;
     }
 
     @include screen('lg', max, 2) {
-      padding: pxtovw(45, 1366) pxtovw(45, 1366) 0;
+      @include grid-template-columns(pxtovw(320, 1366) 1fr);
+
+      padding: pxtovw(45, 1366) pxtovw(36, 1366) 0;
     }
 
     @include screen('md', max, 2) {
-      padding: pxtovw(45, 960) pxtovw(45, 960) 0;
+      @include grid-template-columns(pxtovw(237, 960) 1fr);
+
+      padding: pxtovw(45, 960) pxtovw(36, 960) 0;
     }
 
     @include screen('sm', max, 2) {
-      padding: pxtovw(45, 375) pxtovw(45, 375) 0;
+      @include grid-template-columns(100%);
+      @include grid-template-rows(auto auto auto);
+
+      padding: pxtovw(37, 375) pxtovw(18, 375) 0;
     }
   }
 
   &__media {
     display: block;
-    width: 442px;
-    flex: none;
+    width: 100%;
+    // flex: none;
 
-    @include screen('xlg', max, 2) {
-      width: pxtovw(442, 1660);
-    }
+    @include grid-column(1, 2);
+    @include grid-row(1, 3);
 
-    @include screen('lg', max, 2) {
-      width: pxtovw(390, 1366);
-    }
+    // @include screen('xlg', max, 2) {
+    //   width: pxtovw(442, 1660);
+    // }
 
-    @include screen('md', max, 2) {
-      width: pxtovw(330, 960);
-    }
+    // @include screen('lg', max, 2) {
+    //   width: pxtovw(390, 1366);
+    // }
+
+    // @include screen('md', max, 2) {
+    //   width: pxtovw(330, 960);
+    // }
 
     @include screen('sm', max, 2) {
-      width: 100%;
+      // width: 100%;
       // width: pxtovw(442, 375);
+
+      @include grid-column(1, 2);
+      @include grid-row(2, 3);
     }
   }
 
@@ -106,27 +126,13 @@
 
   &__describe {
     display: block;
-    flex: 1;
+    // flex: 1;
+    @include grid-column(2, 3);
+    @include grid-row(1, 2);
 
-    &:not(:first-child) {
-      margin-left: 42px;
-
-      @include screen('xlg', max, 2) {
-        margin-left: pxtovw(42, 1660);
-      }
-
-      @include screen('lg', max, 2) {
-        margin-left: pxtovw(42, 1366);
-      }
-
-      @include screen('md', max, 2) {
-        margin-left: pxtovw(20, 960);
-      }
-
-      @include screen('sm', max, 2) {
-        // margin-left: pxtovw(42, 1660);
-        margin-left: 0;
-      }
+    @include screen('sm', max, 2) {
+      @include grid-column(1, 2);
+      @include grid-row(1, 2);
     }
   }
 
@@ -273,6 +279,7 @@
     }
 
     @include screen('sm', max, 2) {
+      display: none;
       font-size: pxtovw(12, 375);
     }
 
@@ -352,8 +359,30 @@
     }
   }
 
+  &__offers {
+    display: block;
+
+    @include grid-column(2, 3);
+    @include grid-row(2, 3);
+
+    @include screen('sm', max, 2) {
+      @include grid-column(1, 2);
+      @include grid-row(3, 4);
+    }
+  }
+
   &__table {
     width: 100%;
+
+    tr {
+      th, td {
+        &:last-child {
+          @include screen('sm', max, 2) {
+            display: none;
+          }
+        }
+      }
+    }
 
     &:not(:first-child) {
       margin-top: 30px;
