--- a/app/pages/host-account/host-account-managers-invite-success.pug
+++ b/app/pages/host-account/host-account-managers-invite-success.pug
@@ -15,10 +15,10 @@ block header
   - var host = true
 
 block content
-  +nd-page-header._grid._grid_acc
+  +nd-page-header._grid
     .nd-container
       +nd-page-header-side
-        +nd-link-icon('arrow5')._back.__back.nd-hide Back
+        +nd-link-icon('arrow5')._back._back_md21.__back_md-noname.__back.nd-hide-from-md Back
       +nd-page-header-main
         - var menuList = getData('sideNavProfileHost.json').menu;
         +e.mb-menu.nd-hide-from-md
