--- a/app/pages/host-account/host-account-settings-company.pug
+++ b/app/pages/host-account/host-account-settings-company.pug
@@ -17,15 +17,12 @@ block header
 block content
   +nd-page-header._grid
     .nd-container
-      +e.title.nd-hide-from-sm Settings
       +nd-page-header-side
-        +nd-link-icon('arrow5')._back._back_md21.__back_md-noname.nd-hide-from-md Back
+        +nd-link-icon('arrow5')._back._back_md21.__back_md-noname.__back.nd-hide-from-md Back
       +nd-page-header-main
         - var menuList = getData('sideNavProfileHost.json').menu;
-        +e.mb-menu.nd-hide-from-md.nd-hide-sm
+        +e.mb-menu.nd-hide-from-md
           +slider-navigation(menuList, 3, 'Settings')
-        +e.mb-menu.nd-hide-from-sm
-          +slider-navigation([{name: "Basic information", href: "host-account-settings-basic.html"}, {name: "Password", href: "host-account-settings-password.html"}, {name: "Company details", href: "host-account-settings-company.html"}, {name: "Notification settings", href: "host-account-settings-notifications.html"}], 2, 'Company details')
 
   +nd-content
     .nd-container
