--- a/app/pages/host-account/host-account.pug
+++ b/app/pages/host-account/host-account.pug
@@ -15,10 +15,10 @@ block header
   - var host = true
 
 block content
-  +nd-page-header._grid._grid_acc
+  +nd-page-header._grid
     .nd-container
       +nd-page-header-side
-        +nd-link-icon('arrow5')._back.__back.nd-hide Back
+        +nd-link-icon('arrow5')._back._back_md21.__back_md-noname.__back.nd-hide-from-md Back
       +nd-page-header-main
         - var menuList = getData('sideNavProfileHost.json').menu;
         +e.mb-menu.nd-hide-from-md
@@ -33,10 +33,12 @@ block content
 
       +nd-content-main
         +nd-section
-          +nd-section-header._fx._md-pg-head.nd-hide-sm
-            +nd-section-title._fz24 Spaces
+          +nd-section-header._fx._md-pg-head
+            +nd-section-title._fz24.nd-hide-md Spaces
             +e.menu
-              +slider-navigation([{name: "All spaces", href: "#"}, {name: "Active spaces only", href: "#"}], 0, 'All spaces')
+              +filtration.__filtration_md
+                +e.label.nd-hide-from-md.nd-hide-sm Show
+                +drop-navigation([{title: 'Spaces', name: "All spaces", href: "#"}, {name: "Active spaces only", href: "#"}], 0, 'All spaces')._md.__select.js-offer-select
               +nd-button('a')._pad10._h35.__add_mw180._ml56(href="#") Add space
           - var spaces = getData('nd-ha-spaces.json')
           +records.__records_mt40
