--- a/app/blocks/link/nd-link.scss
+++ b/app/blocks/link/nd-link.scss
@@ -199,6 +199,15 @@
       @include rule(height, (xl: 14px, xlg: 14, lg: 14, md: 14, sm: 14));
     }
 
+    &_call {
+      @include rule(width, (xl: 26px, xlg: 26, lg: 26, md: 26, sm: 26));
+      @include rule(height, (xl: 26px, xlg: 26, lg: 26, md: 26, sm: 26));
+
+      &:not(:last-child) {
+        @include rule(margin-right, (xl: 9px, xlg: 9, lg: 9, md: 9, sm: 9));
+      }
+    }
+
     &_nd-plus {
       @include rule(width, (xl: 22px, xlg: 22, lg: 22, md: 22, sm: 22));
       @include rule(height, (xl: 22px, xlg: 22, lg: 22, md: 22, sm: 22));
