--- a/app/components/user-menu-panel/user-menu-panel.scss
+++ b/app/components/user-menu-panel/user-menu-panel.scss
@@ -89,7 +89,7 @@
       }
     }
 
-    .is-filter-popup-opened & {
+    .is-filter-popup-opened &, .is-selection-open & {
       @include screen('sm', max, 2) {
         visibility: hidden;
       }
