--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -148,6 +148,7 @@ include ../blocks/progress/progress
 include ../blocks/promo-section/promo-section
 include ../blocks/promo-slider/promo-slider
 include ../blocks/put-block-into-slot/put-block-into-slot
+include ../blocks/quick-search/quick-search
 include ../blocks/rating/rating
 include ../blocks/reg-grid/reg-grid
 include ../blocks/request-info/request-info
@@ -162,6 +163,7 @@ include ../blocks/scroll-form/scroll-form-v3
 include ../blocks/section/nd-section
 include ../blocks/section/section
 include ../blocks/selectable-block/selectable-block
+include ../blocks/selection/selection
 include ../blocks/short-info/short-info
 include ../blocks/short-profile/short-profile
 include ../blocks/short-space/short-space
@@ -183,12 +185,14 @@ include ../blocks/space-type/space-type
 include ../blocks/space/nd-space
 include ../blocks/space/space
 include ../blocks/spoiler/spoiler
+include ../blocks/stages/stages
 include ../blocks/state/state
 include ../blocks/status-button/status-button
 include ../blocks/status/status
 include ../blocks/step-info/step-info
 include ../blocks/steps/steps
 include ../blocks/sticky-message/sticky-message
+include ../blocks/styled-radio/styled-radio
 include ../blocks/summary-table/summary-table
 include ../blocks/switch/switch
 include ../blocks/table-head/table-head
@@ -235,6 +239,7 @@ include ../components/form-order-summary/form-order-summary
 include ../components/header/header
 include ../components/header/nd-header
 include ../components/lead/lead
+include ../components/lead/nd-lead
 include ../components/location/location
 include ../components/location/nd-location
 include ../components/main-lead/main-lead
