--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -9,7 +9,7 @@ block header
   - var isMap = true
 
 block content
-  +main-lead
+  +nd-lead({title: 'Rent an office in a couple of clicks', describe: 'Choose how to search or simply view all spaces.', mainimage: true, support: true, stages: ['Search', 'View', 'Sign', 'Move in']})
   +nd-section
     .nd-container
       +nd-section-header
