--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -93,13 +93,13 @@ block content
             +e.head
               +page-title Страницы Host Account (partly only HD breakpoint)
             +e.list
-              +nd-link(href="host-account.html") Spacepool - Host Account - Spaces <b>(All breaks)</b> (host-account.html)
-              +nd-link(href="host-account-messages.html") Spacepool - Host Account - Messages <b>(All breaks)</b> (host-account-messages.html)
+              +nd-link(href="host-account.html") Spacepool - Host Account - Spaces <b class="nd-hide">(All breaks)</b> (host-account.html)
+              +nd-link(href="host-account-messages.html") Spacepool - Host Account - Messages <b class="nd-hide">(All breaks)</b> (host-account-messages.html)
               +nd-link(href="host-account-managers.html") Spacepool - Host Account - Managers (host-account-managers.html)
               +nd-link(href="host-account-managers-inactive.html") Spacepool - Host Account - Managers | Inactive (host-account-managers-inactive.html)
               +nd-link(href="host-account-managers-invite.html") Spacepool - Host Account - Managers | Invite (host-account-managers-invite.html)
               +nd-link(href="host-account-managers-invite-success.html") Spacepool - Host Account - Managers | Invite Success(host-account-managers-invite-success.html)
-              +nd-link(href="host-account-settings.html") Spacepool - Host Account - Settings <b>(All breaks)</b> (host-account-settings.html)
+              +nd-link(href="host-account-settings.html") Spacepool - Host Account - Settings <b class="nd-hide">(All breaks)</b> (host-account-settings.html)
               +nd-link(href="host-account-settings-basic.html") Spacepool - Host Account - Settings | Basic information (host-account-settings-basic.html)
               +nd-link(href="host-account-settings-company.html") Spacepool - Host Account - Settings | Company details (host-account-settings-company.html)
               +nd-link(href="host-account-settings-password.html") Spacepool - Host Account - Settings | Password (host-account-settings-password.html)
@@ -152,7 +152,7 @@ block content
               +page-title Страницы общие
             +e.list
               +nd-link(href="nd-ui-kit.html") Spacepool - Новый ui-kit (nd-ui-kit.html)
-              +nd-link(href="index.html") Spacepool - Главная (index.html)
+              +nd-link(href="index.html") Spacepool - Главная <b>Update from 27.01.21</b> (index.html)
               +nd-link(href="space-v3.html") Spacepool - Space (space-v3.html)
               +nd-link(href="nd-signup.html") Spacepool - Sign Up (nd-signup.html)
               +nd-link(href="nd-signup-confirm.html") Spacepool - Sign Up - Email Confirmed(nd-signup-confirm.html)
