--- a/app/components/search-panel/search-panel.scss
+++ b/app/components/search-panel/search-panel.scss
@@ -333,7 +333,7 @@
 
     &_team {
       width: 26px;
-      background-image: url("data:image/svg+xml,%3Csvg width='26' height='14' viewBox='0 0 26 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15.6061 3.85349C15.6061 5.72223 14.1477 7.20698 12.3853 7.20698C10.6229 7.20698 9.16455 5.72223 9.16455 3.85349C9.16455 1.98475 10.6229 0.5 12.3853 0.5C14.1477 0.5 15.6061 1.98475 15.6061 3.85349Z' stroke='%23A3ACBA'/%3E%3Cpath d='M18.1355 12.6114C18.1355 10.6767 15.561 9.10825 12.3852 9.10825C9.20938 9.10825 6.63489 10.6767 6.63489 12.6114' stroke='%23A3ACBA' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M7.18574 5.51424C7.18574 6.83912 6.15309 7.88298 4.91581 7.88298C3.67853 7.88298 2.64587 6.83912 2.64587 5.51424C2.64587 4.18936 3.67853 3.14551 4.91581 3.14551C6.15309 3.14551 7.18574 4.18936 7.18574 5.51424Z' stroke='%23A3ACBA'/%3E%3Cpath d='M0.634888 12.0341C0.634888 10.5938 2.55147 9.42615 4.9157 9.42615' stroke='%23A3ACBA' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M18.084 5.51424C18.084 6.83912 19.1167 7.88298 20.354 7.88298C21.5912 7.88298 22.6239 6.83912 22.6239 5.51424C22.6239 4.18936 21.5912 3.14551 20.354 3.14551C19.1167 3.14551 18.084 4.18936 18.084 5.51424Z' stroke='%23A3ACBA'/%3E%3Cpath d='M24.6349 12.0341C24.6349 10.5938 22.7183 9.42615 20.3541 9.42615' stroke='%23A3ACBA' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+      background-image: url("../images/bg/bg-search-team.svg");
 
       @include screen('xlg', max, 2) {
         width: pxtovw(26, 1660);
@@ -360,7 +360,7 @@
 
     &_space {
       width: 15px;
-      background-image: url("data:image/svg+xml,%3Csvg width='15' height='16' viewBox='0 0 15 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='7.94965' y='0.862976' width='4.27316' height='4.27316' transform='rotate(45 7.94965 0.862976)' fill='%232CE98F'/%3E%3Crect x='3.92102' y='4.89175' width='4.27316' height='4.27316' transform='rotate(45 3.92102 4.89175)' fill='%23E14534'/%3E%3Crect x='11.9784' y='5.13614' width='4.27316' height='4.27316' transform='rotate(45 11.9784 5.13614)' fill='%2326C1F2'/%3E%3Crect x='7.94965' y='9.16492' width='4.27316' height='4.27316' transform='rotate(45 7.94965 9.16492)' fill='%23FD9B12'/%3E%3C/svg%3E%0A");
+      background-image: url("../images/bg/bg-search-type.svg");
 
       @include screen('xlg', max, 2) {
         width: pxtovw(15, 1660);
@@ -387,7 +387,7 @@
 
     &_location {
       width: 17px;
-      background-image: url("data:image/svg+xml,%3Csvg width='17' height='15' viewBox='0 0 17 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16 7.50001V3.36365C16 2.25908 15.1046 1.36365 14 1.36365H3C1.89543 1.36365 1 2.25908 1 3.36365V11.6364C1 12.7409 1.89543 13.6364 3 13.6364H10.5455' stroke='%23A3ACBA'/%3E%3Ccircle cx='9.86362' cy='7.5' r='2.90909' stroke='%23A3ACBA'/%3E%3Cpath d='M11.9091 9.54547L16 13.6364' stroke='%23A3ACBA'/%3E%3C/svg%3E");
+      background-image: url("../images/bg/bg-search-location-old.svg");
 
       @include screen('xlg', max, 2) {
         width: pxtovw(17, 1660);
