--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -229,6 +229,8 @@ $nd-color-green: #69c693;
 $nd-color-border-blue: #106dc2;
 $nd-color-error-text: #d33427;
 $nd-color-payment-border: #e5eef0;
+$nd-color-selection-bg: #eff3fa;
+$nd-color-border6: #d5d7dc;
 
 // ##########
 // Transitions
