--- a/app/blocks/selection/selection.scss
+++ b/app/blocks/selection/selection.scss
@@ -22,6 +22,10 @@
     @include rule(height, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 50));
     @include rule(border-radius, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 44));
 
+    @include screen('sm', max, 2) {
+      box-shadow: 0 pxtovw(2, 375) pxtovw(13, 375) rgba(0, 0, 0, .54);
+    }
+
     #{$b}:hover &, #{$b}.is-open & {
       @include screen('sm', min, 2) {
         background-color: $nd-color-selection-bg;
@@ -181,6 +185,8 @@
     @include rule(margin-top, (xl: 10px, xlg: 10, lg: 10, md: 10, sm: 0));
     @include rule(width, (xl: 478px, xlg: 478, lg: 478, md: 478));
     @include rule(border-radius, (xl: 3px, xlg: 3, lg: 3, md: 3, sm: 0));
+    @include rule(padding-top, (sm: 60));
+    @include rule(padding-bottom, (sm: 60));
 
     @include screen('xlg', max, 2) {
       box-shadow: 0 pxtovw(3, 1660) pxtovw(14, 1660) rgba(0, 0, 0, .13), 0 0 pxtovw(4, 1660) rgba(56, 58, 68, .09);
@@ -227,8 +233,8 @@
     box-sizing: border-box;
     overflow: auto;
 
-    @include rule(padding-top, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 102));
-    @include rule(padding-bottom, (xl: 67px, xlg: 67, lg: 67, md: 67, sm: 108));
+    @include rule(padding-top, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 42));
+    @include rule(padding-bottom, (xl: 67px, xlg: 67, lg: 67, md: 67, sm: 48));
     @include rule(padding-left, (xl: 36px, xlg: 36, lg: 36, md: 36, sm: 20));
     @include rule(padding-right, (xl: 36px, xlg: 36, lg: 36, md: 36, sm: 20));
 
@@ -240,10 +246,10 @@
     }
 
     #{$b}__head_location ~ #{$b}__drop & {
-      @include rule(padding-bottom, (xl: 28px, xlg: 28, lg: 28, md: 28, sm: 98));
+      @include rule(padding-bottom, (xl: 28px, xlg: 28, lg: 28, md: 28, sm: 38));
       @include rule(padding-left, (xl: 33px, xlg: 33, lg: 33, md: 33, sm: 20));
       @include rule(padding-right, (xl: 33px, xlg: 33, lg: 33, md: 33, sm: 20));
-      @include rule(padding-top, (xl: 32px, xlg: 32, lg: 32, md: 32, sm: 102));
+      @include rule(padding-top, (xl: 32px, xlg: 32, lg: 32, md: 32, sm: 42));
     }
   }
 
