fixes for mobile version index start section

--- a/app/blocks/quick-search/quick-search.scss
+++ b/app/blocks/quick-search/quick-search.scss
@@ -38,12 +38,12 @@
       &::before {
         @include pseudo;
         @include rule(height, (xl: 34px, xlg: 34, lg: 34, md: 34, sm: 0));
-        @include rule(width, (xl: .5px, xlg: .5, lg: .5, md: .5, sm: 0));
+        @include rule(width, (xl: 1px, xlg: 1, lg: 1, md: 1, sm: 0));
         @include rule(left, (xl: -1px, xlg: -1, lg: -1, md: -1, sm: 0));
 
         top: 50%;
         transform: translate3d(0, -50%, 0);
-        background-color: $nd-color-border2;
+        background-color: #d3dae6;
         z-index: 1;
 
         @include screen('sm', max, 2) {
