add clear button in desktop for index start section

--- a/app/blocks/selection/selection.pug
+++ b/app/blocks/selection/selection.pug
@@ -6,7 +6,7 @@ mixin selection-head(placeholder)
   +e.DIV.head&attributes(attributes)(data-selection-head)
     +e.placeholder!=placeholder
     +e.values(data-selection-value)
-    +e.toggle
+    +e.BUTTON.toggle(type="button" data-selection-clear)
       +icon('select-arrow2')(width="7" heigh="4")
 
 mixin selection-drop(data)
