add overscrollBehavior for drop

--- a/app/blocks/selection/selection.scss
+++ b/app/blocks/selection/selection.scss
@@ -278,6 +278,7 @@
     width: 100%;
     box-sizing: border-box;
     overflow: auto;
+    overscroll-behavior: none;
 
     @include native-scroll;
     @include rule(padding-top, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 42));
