fix for button in search field

--- a/app/blocks/button/nd-button.scss
+++ b/app/blocks/button/nd-button.scss
@@ -107,6 +107,11 @@
     }
   }
 
+  &_stolzl {
+    font-family: $font-stolzl;
+    font-weight: 500;
+  }
+
   &__preloader {
     position: absolute;
     top: 0;
