--- a/app/blocks/quick-search/quick-search.pug
+++ b/app/blocks/quick-search/quick-search.pug
@@ -53,5 +53,5 @@ mixin quick-search()
                       +e.INPUT.input(name=item.name, value=item.value, type="radio", data-selection-item, data-selection-item-value=item.title, data-selection-item-type="area")
                     +e.SPAN.content!=item.title
     +e.buttons
-      +nd-button-icon('button', {icon: 'search'})._icon_reverse._h60.__button(type="submit") 134 results
+      +nd-button-icon('button', {icon: 'search'})._icon_reverse._h60._stolzl.__button(type="submit") 134 results
     block
