--- a/app/blocks/quick-search/quick-search.scss
+++ b/app/blocks/quick-search/quick-search.scss
@@ -114,9 +114,9 @@
 
   &__button {
     @include rule(min-width, (xl: 212px, xlg: 212, lg: 212, md: 212, sm: 0));
-    @include rule(font-size, (xl: 22px, xlg: 22, lg: 22, md: 22, sm: 18));
 
-    line-height: .9;
+    font-family: $font-stolzl;
+    font-weight: 500;
 
     @include screen('sm', max, 2) {
       width: 100%;
