fix for start page

--- a/app/components/lead/nd-lead.scss
+++ b/app/components/lead/nd-lead.scss
@@ -5,6 +5,10 @@
   width: 100%;
   position: relative;
 
+  @include screen('sm', max, 2) {
+    overflow: hidden;
+  }
+
   .is-selection-open & {
     z-index: 10;
   }
