shift search button to 1px right

--- a/app/blocks/quick-search/quick-search.scss
+++ b/app/blocks/quick-search/quick-search.scss
@@ -5,7 +5,7 @@
   background-color: $nd-color-basic-light;
   box-sizing: border-box;
 
-  @include rule(border-radius, (xl: 44px, xlg: 44, lg: 44, md: 44, sm: 29));
+  @include rule(border-radius, (xl: 45px, xlg: 45, lg: 45, md: 45, sm: 29));
 
   @include screen('sm', max, 2) {
     display: block;
@@ -113,13 +113,15 @@
   }
 
   &__button {
-    @include rule(min-width, (xl: 212px, xlg: 212, lg: 212, md: 212, sm: 0));
+    @include rule(min-width, (xl: 212px, xlg: 212, lg: 212, md: 212, sm: 0));;
 
     font-family: $font-stolzl;
     font-weight: 500;
+    margin-right: -1px;
 
     @include screen('sm', max, 2) {
       width: 100%;
+      margin-right: 0;
     }
   }
 }
