--- a/app/blocks/selection/selection.scss
+++ b/app/blocks/selection/selection.scss
@@ -19,11 +19,15 @@
 
     @include rule(padding-left, (xl: 52px, xlg: 52, lg: 52, md: 52, sm: 45));
     @include rule(padding-right, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 45));
-    @include rule(height, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 50));
+    @include rule(height, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 40));
     @include rule(border-radius, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 44));
 
     @include screen('sm', max, 2) {
       box-shadow: 0 pxtovw(2, 375) pxtovw(13, 375) rgba(0, 0, 0, .54);
+    }
+
+    .nd-lead_old & {
+      @include rule(height, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 50));
     }
 
     #{$b}:hover &, #{$b}.is-open & {
@@ -118,6 +122,7 @@
 
     @include screen('sm', max, 2) {
       line-height: (19 / 16);
+      font-weight: 500;
     }
 
     #{$b}.is-selected & {
@@ -126,6 +131,7 @@
       display: block;
       line-height: (15 / 12);
       color: $color-basic-light;
+      font-weight: 400;
     }
   }
 
