remove style minification

--- a/app/blocks/quick-search/quick-search.scss
+++ b/app/blocks/quick-search/quick-search.scss
@@ -2,9 +2,7 @@
   $b: &;
 
   display: flex;
-  background-color: $nd-color-basic-light; background-image: linear-gradient(to right, $nd-color-basic-light 80%, $nd-color-main 85%, $nd-color-main 100%);
-  background-repeat: no-repeat;
-  background-position: 0 0;
+  background-color: $nd-color-basic-light;
   box-sizing: border-box;
 
   @include rule(border-radius, (xl: 45px, xlg: 45, lg: 45, md: 45, sm: 29));
@@ -123,11 +121,11 @@
   }
 
   &__button {
-    @include rule(min-width, (xl: 212px, xlg: 212, lg: 212, md: 212, sm: 0));;
+    @include rule(min-width, (xl: 212px, xlg: 212, lg: 212, md: 212, sm: 0));
 
     font-family: $font-stolzl;
     font-weight: 500;
-    margin-right: -1px;
+    margin-right: -3px;
 
     @include screen('sm', max, 2) {
       width: 100%;
