fix for average viewing for iOS7 screen

--- a/app/blocks/datepicker/dates-table.scss
+++ b/app/blocks/datepicker/dates-table.scss
@@ -134,6 +134,10 @@
       margin-top: pxtovw(16, 375);
       width: pxtovw(40, 375);
       margin-right: calc((100% - ((4000 * 7vw) / 375)) / 6);
+
+      @media screen and (max-height: 560px) {
+        margin-top: pxtovw(14, 375);
+      }
     }
 
     &:nth-child(7n) {
