--- a/app/blocks/datepicker/dates.scss
+++ b/app/blocks/datepicker/dates.scss
@@ -23,6 +23,10 @@
 
       @include screen('sm', max, 2) {
         margin-bottom: pxtovw(58, 375);
+
+        @media screen and (max-height: 560px) {
+          margin-bottom: pxtovw(20, 375);
+        }
       }
     }
   }
