--- a/app/blocks/form-box/form-box.scss
+++ b/app/blocks/form-box/form-box.scss
@@ -655,6 +655,10 @@
       background-color: $nd-color-basic-light;
       // width: pxtovw(335, 375);
       // margin-top: pxtovw(20, 375);
+
+      @media screen and (max-height: 560px) {
+        padding-top: pxtovw(60, 375);
+      }
     }
 
     &_white {
