--- a/app/blocks/arrange-viewing-form/arrange-viewing-form.scss
+++ b/app/blocks/arrange-viewing-form/arrange-viewing-form.scss
@@ -27,6 +27,10 @@
 
   @include screen('sm', max, 2) {
     padding: pxtovw(16, 375) 0;
+
+    @media screen and (max-height: 560px) {
+      padding: pxtovw(8, 375) 0;
+    }
   }
 
   &__top {
