add style for map-popup in index.css

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -11,12 +11,14 @@
 @import '../blocks/burger/nd-burger.scss';
 @import '../blocks/button/nd-button.scss';
 @import '../blocks/form-elements/check-button.scss';
+@import '../blocks/gallery/gallery.scss';
 @import '../blocks/header-user/header-user.scss';
 @import '../blocks/header-menu/header-menu.scss';
 @import '../blocks/info-notice/info-notice.scss';
 @import '../blocks/info-notices/nd-info-notices.scss';
 @import '../blocks/logo/nd-logo.scss';
 @import '../blocks/link/nd-link.scss';
+@import '../blocks/map-popup/map-popup.scss';
 @import '../blocks/news/nd-news.scss';
 @import '../blocks/quick-search/quick-search.scss';
 @import '../blocks/page/nd-page.scss';
