--- a/app/components/lead/nd-lead.scss
+++ b/app/components/lead/nd-lead.scss
@@ -10,7 +10,11 @@
   }
 
   .is-selection-open & {
-    z-index: 10;
+    z-index: 9;
+
+    @include screen('sm', max, 2) {
+      z-index: 10;
+    }
   }
 
   .nd-container {
